[package]
name = "processed_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
async-graphql = { version = "7.0.2", default-features = false, features = [
    "chrono",
    "graphiql",
    "dataloader",
] }
async-graphql-axum = { version = "7.0.2" }
aws-credential-types = { version = "0.56.0" }
aws-sdk-s3 = { version = "0.29.0" }
axum = { version = "0.7.4", features = ["ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum-tracing-opentelemetry = { version = "0.18.0" }
chrono = { version = "0.4.35" }
clap = { version = "4.5.2", features = ["derive", "env"] }
derive_more = { version = "0.99.17" }
dotenvy = { version = "0.15.7" }
models = { path = "../models" }
opentelemetry = { version = "0.22.0", features = ["metrics"] }
opentelemetry-otlp = { version = "0.15.0", features = ["metrics", "tokio"] }
opentelemetry-semantic-conventions = { version = "0.14.0" }
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
sea-orm = { workspace = true }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40" }
tracing-opentelemetry = { version = "0.23.0" }
tracing-subscriber = { version = "0.3.18" }
url = { version = "2.5.0" }

[build-dependencies]
built = { version = "0.7.1" }
